--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -6,31 +6,14 @@ html {
   background-position: center center;
 }
 
-header {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-body {
-  background-color: rgba(0, 0, 0, 0.6);
-  color: white;
-  min-height: 100vh;
-}
-
 button {
   color: white;
 }
 
 .homeWrapper {
   margin: 8rem 0;
-  width: calc(100vw - 2rem);
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1rem;
-}
-
-.homeTitle {
-  margin: 0;
 }
